--- a/index.html
+++ b/index.html
@@ -478,30 +478,32 @@
               <li class="product-tab-item is-active" role="tab" aria-labelledby="product-spec">
                 <button type="button">상품정보</button>
               </li>
-              <li class="product-tab-item" role="tab" aria-labelledby="product-spec">
+              <li class="product-tab-item" role="tab" aria-labelledby="product-review">
                 <button type="button">
                   리뷰
                   <strong class="badge" aria-label="55개 리뷰">55</strong>
                 </button>
               </li>
-              <li class="product-tab-item" role="tab" aria-labelledby="product-spec">
+              <li class="product-tab-item" role="tab" aria-labelledby="product-inquiry">
                 <button type="button">
                   문의
                   <strong class="badge" aria-label="96개 문의">96</strong>
                 </button>
 
               </li>
-              <li class="product-tab-item" role="tab" aria-labelledby="product-spec">
+              <li class="product-tab-item" role="tab" aria-labelledby="product-shipment">
                 <button type="button">배송/환불</button>
               </li>
-              <li class="product-tab-item" role="tab" aria-labelledby="product-spec">
+              <li class="product-tab-item" role="tab" aria-labelledby="product-recommendation">
                 <button type="button">추천</button>
               </li>
             </ul>
           </div>
+
         </div>
       </div>
     </div>
+
   </main>
 
   <footer class="global-footer">
