--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                 <div class="user-gallery-slider">
                   <ol class="slider-list">
 
-                    <li class="slider-item">
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-1">
                       <div class="gallery-card">
                         <figure class="gallery-card-image">
                           <img src="./assets/images/img-review-01.jpg" alt="" />
@@ -541,7 +541,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="slider-item">
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-2">
                       <div class="gallery-card">
                         <figure class="gallery-card-image">
                           <img src="./assets/images/img-review-02.jpg" alt="" />
@@ -559,7 +559,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="slider-item">
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-3">
                       <div class="gallery-card">
                         <figure class="gallery-card-image">
                           <img src="./assets/images/img-review-03.jpg" alt="" />
@@ -577,7 +577,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="slider-item">
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-4">
                       <div class="gallery-card">
                         <figure class="gallery-card-image">
                           <img src="./assets/images/img-review-04.jpg" alt="" />
@@ -595,7 +595,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="slider-item">
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-5">
                       <div class="gallery-card">
                         <figure class="gallery-card-image">
                           <img src="./assets/images/img-review-05.jpg" alt="" />
@@ -619,18 +619,21 @@
                 <div class="user-gallery-thumbnail">
                   <!-- 썸네일 -->
 
-                  <ol class="thumbnail-list">
-                    <li class="thumbnail-item">
+                  <ol class="thumbnail-list" role="tablist">
+                    <li class="thumbnail-item" id="user-gallery-tab-1" role="tab">
                       <button type="button"><img src="./assets/images/img-review-01.jpg" alt="1번 스타일링샷"></button>
                     </li>
-                    <li class="thumbnail-item">
+                    <li class="thumbnail-item" id="user-gallery-tab-2" role="tab">
                       <button type="button"><img src="./assets/images/img-review-02.jpg" alt="2번 스타일링샷"></button>
                     </li>
-                    <li class="thumbnail-item">
+                    <li class="thumbnail-item" id="user-gallery-tab-3" role="tab">
                       <button type="button"><img src="./assets/images/img-review-03.jpg" alt="3번 스타일링샷"></button>
                     </li>
-                    <li class="thumbnail-item">
+                    <li class="thumbnail-item" id="user-gallery-tab-4" role="tab">
                       <button type="button"><img src="./assets/images/img-review-04.jpg" alt="4번 스타일링샷"></button>
+                    </li>
+                    <li class="thumbnail-item" id="user-gallery-tab-5" role="tab">
+                      <button type="button"><img src="./assets/images/img-review-05.jpg" alt="5번 스타일링샷"></button>
                     </li>
                   </ol>
 
