--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <input class="form-input" type="text" placeholder="스토어 검색" />
                   </div>
 
-                  <section class="search-history">
+                  <section class="search-history is-active">
                     <header class="search-history-header">
                       <h2 class="title">최근 검색어</h2>
                       <button type="button">전체 삭제</button>
@@ -2431,7 +2431,7 @@
     </form>
   </aside>
 
-  <aside class="cart-modal">
+  <aside class="cart-modal is-active">
     <h1 class="cart-title">장바구니에 상품을 담았습니다.</h1>
 
     <div class="button-group">
@@ -2463,7 +2463,7 @@
     </button>
   </aside> -->
 
-  <div class="overlay" aria-hidden></div>
+  <div class="overlay is-active" aria-hidden></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <script src="./js/carousels.js"></script>
 </body>
