--- a/index.html
+++ b/index.html
@@ -2038,7 +2038,7 @@
     <nav class="sidebar-nav">
       <h2 class="visually-hidden">메뉴</h2>
 
-      <div class="drawer-menu is-community">
+      <div class="drawer-menu is-community is-open">
         <button class="drawer-menu-button" type="button">
           <i class="ic-community" aria-hidden></i>
           커뮤니티
@@ -2467,6 +2467,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <script src="./js/carousels.js"></script>
   <script src="./js/sidebar.js"></script>
+  <script src="./js/sidebar-drawer.js"></script>
 </body>
 
 </html>
