--- a/index.html
+++ b/index.html
@@ -1493,7 +1493,7 @@
           </section>
           <div class="product-section-divider sm-only" aria-hidden></div> -->
 
-          <div class="product-shipment is-open" role="tabpanel">
+          <div class="product-shipment" role="tabpanel">
             <header class="product-section-header sm-only">
               <h1 class="title">배송/교환/환불</h1>
               <button class="icon-button" type="button" aria-label="더보기">
@@ -2468,6 +2468,7 @@
   <script src="./js/carousels.js"></script>
   <script src="./js/sidebar.js"></script>
   <script src="./js/sidebar-drawer.js"></script>
+  <script src="./js/section-header.js"></script>
 </body>
 
 </html>
