--- a/index.html
+++ b/index.html
@@ -2150,7 +2150,7 @@
     </nav>
   </aside>
 
-  <aside class="search-modal lg-hidden">
+  <aside class="search-modal is-active lg-hidden">
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
@@ -2469,6 +2469,7 @@
   <script src="./js/sidebar.js"></script>
   <script src="./js/sidebar-drawer.js"></script>
   <script src="./js/section-header.js"></script>
+  <script src="./js/search-modal.js"></script>
 </body>
 
 </html>
