--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <input class="form-input" type="text" placeholder="스토어 검색" />
                   </div>
 
-                  <section class="search-history is-active">
+                  <section class="search-history">
                     <header class="search-history-header">
                       <h2 class="title">최근 검색어</h2>
                       <button type="button">전체 삭제</button>
@@ -116,7 +116,7 @@
                     <strong class="badge">5</strong>
                   </a>
 
-                  <div class="my-menu sm-hidden is-active">
+                  <div class="my-menu sm-hidden">
                     <button class="my-menu-button" type="button" aria-label="마이메뉴 열기 버튼">
                       <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨" />
                     </button>
@@ -2471,6 +2471,7 @@
   <script src="./js/section-header.js"></script>
   <script src="./js/search-modal.js"></script>
   <script src="./js/order-cta.js"></script>
+  <script src="./js/my-menu.js"></script>
 </body>
 
 </html>
