--- a/index.html
+++ b/index.html
@@ -2474,6 +2474,7 @@
   <script src="./js/my-menu.js"></script>
   <script src="./js/gnb-search.js"></script>
   <script src="./js/review.js"></script>
+  <script src="./js/product-tab.js"></script>
 </body>
 
 </html>
